set up the runTime permissions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
-
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -40,6 +38,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MapsActivityv2"
+            android:label="@string/title_activity_maps_activityv2">
+
         </activity>
     </application>
 
