--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:11.0.1'
+    compile 'com.google.android.gms:play-services-maps:11.0.1'
+    testCompile 'junit:junit:4.12'
 }
