--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services:11.0.1'
     compile 'com.google.android.gms:play-services-maps:11.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
