--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,16 +38,16 @@
 
         <activity
             android:name=".activities.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
         <activity android:name=".activities.LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.guest.iamhere.activities.LoginGateActivity"></meta-data>
+                android:value="com.example.guest.iamhere.activities.LoginGateActivity" />
         </activity>
         <activity android:name=".activities.CreateAccountActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.guest.iamhere.activities.LoginGateActivity"></meta-data>
+                android:value="com.example.guest.iamhere.activities.LoginGateActivity" />
         </activity>
         <activity android:name=".activities.LoginGateActivity">
             <intent-filter>
@@ -56,7 +56,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity"></activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
