--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 
