--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.guest.iamhere">
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <service android:name=".MyFirebaseMessagingService">
         <intent-filter>
@@ -21,8 +23,7 @@
     <service
         android:name=".services.CustomMessagingService"
         android:enabled="true"
-        android:exported="true">
-    </service>
+        android:exported="true"></service>
 
     <application
         android:allowBackup="true"
@@ -31,12 +32,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
 
         <activity android:name=".activities.LoginActivity">
             <meta-data
@@ -59,18 +57,9 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity
-            android:name=".activities.MapsActivity"
-            android:label="@string/title_activity_maps">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.guest.iamhere.activities.MainActivity" />
-        </activity>
-
         <activity
             android:name=".activities.NewSwarmReportActivity"
-            android:value="com.example.guest.iamhere.activities.MainActivity" >
+            android:value="com.example.guest.iamhere.activities.MainActivity">
             <meta-data
                 android:name="com.google.firebase.messaging.default_notification_icon"
                 android:resource="@drawable/ic_priority_high_black_24dp" />
@@ -81,7 +70,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.guest.iamhere.activities.MainActivity" />
         </activity>
-
+        <activity android:name=".activities.MapActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.guest.iamhere.activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
