add aboutActivity section with link to video, privacy policy, and contact

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.guest.iamhere.activities.MainActivity" />
         </activity>
+        <activity android:name=".activities.AboutActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.guest.iamhere.activities.LoginGateActivity">
+            </meta-data>
+        </activity>
     </application>
 
 </manifest>
