--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,79 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fisherdynamic.swarmreporter1">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/beetransparent"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity android:name=".activities.LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fisherdynamic.swarmreporter1.activities.LoginGateActivity" />
+        </activity>
+        <activity android:name=".activities.CreateAccountActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fisherdynamic.swarmreporter1.activities.LoginGateActivity" />
+        </activity>
+        <activity android:name=".activities.LoginGateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.NewSwarmReportActivity"
+            android:value="fisherdynamic.swarmreporter1.activities.MainActivity">
+            <meta-data
+                android:name="com.google.firebase.messaging.default_notification_icon"
+                android:resource="@drawable/ic_priority_high_black_24dp" />
+            <meta-data
+                android:name="com.google.firebase.messaging.default_notification_color"
+                android:resource="@color/colorAccent" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fisherdynamic.swarmreporter1.activities.MainActivity" />
+        </activity>
+        <activity android:name=".activities.MapActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fisherdynamic.swarmreporter1.activities.MainActivity" />
+        </activity>
+        <activity android:name=".activities.MyClaimedSwarmsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fisherdynamic.swarmreporter1.activities.MainActivity" />
+        </activity>
+        <activity android:name=".activities.MyReportedSwarmsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fisherdynamic.swarmreporter1.activities.MainActivity" />
+        </activity>
+        <activity android:name=".activities.AboutActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fisherdynamic.swarmreporter1.activities.LoginGateActivity">
+            </meta-data>
         </activity>
     </application>
 
