--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,13 +82,15 @@
             android:label="About SwarmReporter">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="fisherdynamic.swarmreporter1.activities.LoginGateActivity"></meta-data>
+                android:value="fisherdynamic.swarmreporter1.activities.LoginGateActivity" />
         </activity>
 
         <service
             android:name=".services.LocationService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".activities.ResolverActivity"></activity>
     </application>
 
 </manifest>
