--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
